--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,13 @@ authors = ["David Loewe <sd>"]
 anyhow = "1.0.83"
 async-trait = "0.1.80"
 clap = { version = "4.5.4", features = ["derive"] }
+crossterm = "0.27.0"
 futures-util = "0.3.30"
+itertools = "0.13.0"
 once_cell = "1.19.0"
+ratatui = { version = "0.26.2", features = ["all-widgets"] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["time"] }
 tokio-modbus = { version = "0.11.0", features = ["futures-util", "rtu-server", "tcp-server"] }
+unicode-width = "0.1.12"
