--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["David Loewe <sd>"]
 [dependencies]
 anyhow = "1.0.83"
 async-trait = "0.1.80"
+byteorder = "1.5.0"
 clap = { version = "4.5.4", features = ["derive"] }
 crossterm = "0.27.0"
 futures-util = "0.3.30"
