Add access type

--- a/config.json
+++ b/config.json
@@ -5,127 +5,148 @@
         "Serial Number": {
             "read_code": 4,
             "address": "0x4000",
-            "length": 4,
+            "length": 30,
+            "access": "ReadOnly",
             "type": "PackedString"
         },
         "Firmware Version": {
             "read_code": 4,
             "address": "0x4004",
             "length": 2,
+            "access": "ReadOnly",
             "type": "PackedString"
         },
         "User Settable Max Current": {
             "read_code": 4,
             "address": "0x4006",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Error Code": {
             "read_code": 4,
             "address": "0x4008",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Socket Lock State": {
             "read_code": 4,
             "address": "0x400A",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Charging State": {
             "read_code": 4,
             "address": "0x400C",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Charging Current Limit": {
             "read_code": 4,
             "address": "0x400E",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Charging Current L1": {
             "read_code": 4,
             "address": "0x4010",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Charging Current L2": {
             "read_code": 4,
             "address": "0x4012",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Charging Current L3": {
             "read_code": 4,
             "address": "0x4014",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Voltage L1": {
             "read_code": 4,
             "address": "0x4016",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Voltage L2": {
             "read_code": 4,
             "address": "0x4018",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Voltage L3": {
             "read_code": 4,
             "address": "0x401A",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Active Power": {
             "read_code": 4,
             "address": "0x401C",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Energy Delivered": {
             "read_code": 4,
             "address": "0x401E",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Communication Timeout": {
             "read_code": 4,
             "address": "0x4020",
             "length": 1,
+            "access": "ReadOnly",
             "type": "U16"
         },
         "Set Charging Current Limit": {
             "read_code": 4,
             "address": "0x4100",
             "length": 2,
+            "access": "ReadOnly",
             "type": "U32"
         },
         "Lock/Unlock Socket Cable": {
             "read_code": 4,
             "address": "0x4103",
             "length": 1,
+            "access": "ReadOnly",
             "type": "U16"
         },
         "Start/Stop Charging Session": {
             "read_code": 4,
             "address": "0x4105",
             "length": 1,
+            "access": "ReadOnly",
             "type": "U16"
         },
         "Set Communication Timeout": {
             "read_code": 4,
             "address": "0x4106",
             "length": 1,
+            "access": "ReadOnly",
             "type": "U16"
         },
         "Set Fallback Limit": {
             "read_code": 4,
             "address": "0x4109",
             "length": 1,
+            "access": "ReadOnly",
             "type": "U16"
         }
     }
