--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ crossterm = "0.27.0"
 futures-util = "0.3.30"
 itertools = "0.13.0"
 once_cell = "1.19.0"
-ratatui = { version = "0.26.2", features = ["all-widgets"] }
+ratatui = { version = "0.26.2", features = ["all-widgets", "unstable-widget-ref"] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["time"] }
