--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["time"] }
 tokio-modbus = { version = "0.11.0", features = ["futures-util", "rtu-server", "tcp-server"] }
+tokio-serial = "5.4.4"
 unicode-width = "0.1.12"
