--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ ratatui = { version = "0.26.2", features = ["all-widgets", "unstable-widget-ref"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["time"] }
-tokio-modbus = { version = "0.11.0", features = ["futures-util", "rtu-server", "tcp-server"] }
+tokio-modbus = { git = "https://github.com/tumbleowlee/tokio-modbus", features = ["futures-util", "rtu-server", "tcp-server"] }
 tokio-serial = "5.4.4"
 unicode-width = "0.1.12"
