--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "interval_ms": 500,
     "contiguous_memory": [
         {
+            "slave_id": 1,
             "read_code": 4,
             "range": {
                 "start": "0x4000",
@@ -12,6 +13,7 @@
     ],
     "definitions": {
         "Serial Number": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4000",
             "length": 4,
@@ -19,6 +21,7 @@
             "type": "PackedAscii"
         },
         "Firmware Version": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4004",
             "length": 2,
@@ -26,6 +29,7 @@
             "type": "PackedAscii"
         },
         "User Settable Max Current": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4006",
             "length": 2,
@@ -33,6 +37,7 @@
             "type": "U32"
         },
         "Error Code": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4008",
             "length": 2,
@@ -40,6 +45,7 @@
             "type": "U32"
         },
         "Socket Lock State": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x400A",
             "length": 2,
@@ -47,6 +53,7 @@
             "type": "U32"
         },
         "Charging State": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x400C",
             "length": 2,
@@ -54,6 +61,7 @@
             "type": "U32"
         },
         "Charging Current Limit": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x400E",
             "length": 2,
@@ -61,6 +69,7 @@
             "type": "U32"
         },
         "Charging Current L1": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4010",
             "length": 2,
@@ -68,6 +77,7 @@
             "type": "U32"
         },
         "Charging Current L2": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4012",
             "length": 2,
@@ -75,6 +85,7 @@
             "type": "U32"
         },
         "Charging Current L3": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4014",
             "length": 2,
@@ -82,6 +93,7 @@
             "type": "U32"
         },
         "Voltage L1": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4016",
             "length": 2,
@@ -89,6 +101,7 @@
             "type": "U32"
         },
         "Voltage L2": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4018",
             "length": 2,
@@ -96,6 +109,7 @@
             "type": "U32"
         },
         "Voltage L3": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x401A",
             "length": 2,
@@ -103,6 +117,7 @@
             "type": "U32"
         },
         "Active Power": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x401C",
             "length": 2,
@@ -110,6 +125,7 @@
             "type": "U32"
         },
         "Energy Delivered": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x401E",
             "length": 2,
@@ -117,6 +133,7 @@
             "type": "U32"
         },
         "Communication Timeout": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4020",
             "length": 1,
@@ -124,6 +141,7 @@
             "type": "U16"
         },
         "Set Charging Current Limit": {
+            "slave_id": 2,
             "read_code": 4,
             "address": "0x4100",
             "length": 2,
@@ -131,6 +149,7 @@
             "type": "U32"
         },
         "Lock/Unlock Socket Cable": {
+            "slave_id": 2,
             "read_code": 4,
             "address": "0x4103",
             "length": 1,
@@ -138,6 +157,7 @@
             "type": "U16"
         },
         "Start/Stop Charging Session": {
+            "slave_id": 2,
             "read_code": 4,
             "address": "0x4105",
             "length": 1,
@@ -145,6 +165,7 @@
             "type": "U16"
         },
         "Set Communication Timeout": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4106",
             "length": 1,
@@ -152,6 +173,7 @@
             "type": "U16"
         },
         "Set Fallback Limit": {
+            "slave_id": 1,
             "read_code": 4,
             "address": "0x4109",
             "length": 1,
